fix(demos/todo): fix left sidebar gap by changing overflow to visible

--- a/demos/todo/frontend/src/App.css
+++ b/demos/todo/frontend/src/App.css
@@ -56,7 +56,7 @@ body {
   grid-template-columns: auto 1fr auto;
   grid-template-rows: auto 1fr auto;
   height: 100vh;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .app-main {
