--- a/demos/todo/frontend/src/components/Sidebar.css
+++ b/demos/todo/frontend/src/components/Sidebar.css
@@ -7,7 +7,7 @@
 	display: flex;
 	flex-direction: column;
 	height: 100%;
-	overflow-y: auto;
+	overflow: visible;
 	position: relative;
 }
 
